# secure-notepad

./: .gitignore  LICENSE  LICENSE.txt  README.md  argon2id_calibration.js  config.json  package-lock.json  package.json
calibrate/: Cargo.toml
calibrate/src/: main.rs
client/: .babelrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: auth.ts  display.ts  hybrid.ts  icons.ts  index.ts  notes.ts  screen.ts  utils.ts
client/src/lib/: aes-js.min.js  alerty.min.d.ts  jsencrypt.min.js
client/src/lib/forge/: ed25519.js  log.js  pbkdf2.js  prng.js  rsa.js
misc/: LICENSE-alerty.txt  LICENSE-amit.txt  LICENSE-base64.txt
public/: index.html  manifest.json  password.html
public/css/: alerty.css  style.css
public/js/: alerty.min.js  app.js  base64.min.js  bundle.js  bundle.js.LICENSE.txt  bundle.js.map  hybrid.js  jsencrypt.min.js  utils.js
public/js/poly/: formdata.min.js  typedarray.min.js  url.min.js
sbuild/: erl_crash.dump
sbuild/linux/releases/: COOKIE
sbuild/linux/releases/0.1.0/: elixir  env.bat  runtime.exs  start.boot  sys.config  (+4 more)
sbuild/win/releases/: COOKIE  start_erl.data
server/: .gitignore  README.md  _build.bat  build.bat  build.sh  mix.exs  package-lock.json  package.json  testing.bat  testing_.bat
server/config/: config.exs
server/lib/: secure_notepad_server.ex
server/lib/secure_notepad_server/: application.ex  argon2w.ex  cacher.ex  endpoint.ex  hybrid.ex  options.ex
server/priv/: mime.json
server/src/: argon2.ts  index.ts
server/test/: snotepad_backend_test.exs
src/: aes.ts  hybrid.ts  index.ts
(+1710 files in other folders)
