[package]
name = "calibrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0"
question = "0.2.2"
random-string = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }